--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,15 @@
-html {
-    font-size: 100%;
-}
-
 body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
-        sans-serif;
-    font-size: 1rem;
-    line-height: 1.5;
+  font-family: sans-serif;
 }
 
-button:disabled {
-    opacity: 0.5;
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background: #efefef;
+  padding: 5px 0;
+}
+
+.AppLoader {
+  text-align: center;
 }
